# tdapiclient-python

./: .gitignore  .pylintrc  README.md  pyproject.toml
tdapiclient/: __init__.py  accounts.py  auth.py  base.py  client.py  instruments.py  marketdata.py
