[tool.poetry]
name = "tdapiclient-python"
version = "0.1.0"
description = "A Python client for the TD Ameritrade API"
authors = ["Raffaele Sandrini <raffaele@sandrini.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
cryptography = "^2.8"

[tool.poetry.dev-dependencies]
pylint = ">=2.4.4"
mypy = ">=0.761"
black = ">=19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
